--- a/react/src/App.css
+++ b/react/src/App.css
@@ -65,12 +65,12 @@ li {
     cursor: pointer;
 }
 
-img {
+#diblogo {
     transition: 1s;
     cursor: pointer;
 }
 
-img:hover {
+#diblogo:hover {
     transform: scale(1.1);
     transition: 1s;
     cursor: pointer;
@@ -136,9 +136,11 @@ button:hover {
 }
 
 .favs {
-    display: flex;
-  flex-flow: row wrap;
-  justify-content: space-around;
+    margin: 10%;
+    padding: 15px;
+    padding-bottom: 2%;
+    transition: 2s;
+    margin-bottom: 5%;
 }
 
 .post {
