clean up for deploy

--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,4 @@
-/** {
-    margin: 0;
-}*/
+
 span {
     font-weight: 100;
 }
@@ -83,10 +81,10 @@ h1 {
     position: fixed;
     top: 0;
     color: silver;
-    background: #485563;  /* fallback for old browsers */
+    background: #485563;
     background: -webkit-linear-gradient(#29323c, #485563);
     background: -o-linear-gradient(#29323c, #485563);
-    background: linear-gradient(#29323c, #485563);  /* Chrome 10-25, Safari 5.1-6 */ /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+    background: linear-gradient(#29323c, #485563);
 }
 
 h3 {
@@ -167,7 +165,6 @@ button:hover {
 #singleView {
     margin-bottom: 5%;
 }
-/*-----------------------------------*/
 
 @media (min-width: 768px) {
 
